// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appinsights-instrumentation - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Guidance for instrumenting webapps with Azure Application Insights. Provides telemetry patterns, SDK setup, and configuration references.
USE FOR: how to instrument app, App Insights SDK, telemetry patterns, what is App Insights, Application Insights guidance, instrumentation examples, APM best practices.
DO NOT USE FOR: adding App Insights to my app (use azure-prepare), add telemetry to my project (use azure-prepare), add monitoring (use azure-prepare). This skill provides guidance—azure-prepare orchestrates component changes.
",
  "extractedKeywords": [
    "adding",
    "app service",
    "appinsights",
    "application",
    "azure",
    "azure-prepare",
    "best",
    "bicep",
    "changes",
    "cli",
    "component",
    "configuration",
    "container",
    "examples",
    "guidance",
    "insights",
    "instrument",
    "instrumentation",
    "instrumenting",
    "monitor",
    "monitoring",
    "orchestrates",
    "patterns",
    "practices",
    "project",
    "provides",
    "references",
    "setup",
    "skill",
    "telemetry",
    "this",
    "webapps",
    "what",
    "with",
  ],
  "name": "appinsights-instrumentation",
}
`;

exports[`appinsights-instrumentation - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "adding",
  "app service",
  "appinsights",
  "application",
  "azure",
  "azure-prepare",
  "best",
  "bicep",
  "changes",
  "cli",
  "component",
  "configuration",
  "container",
  "examples",
  "guidance",
  "insights",
  "instrument",
  "instrumentation",
  "instrumenting",
  "monitor",
  "monitoring",
  "orchestrates",
  "patterns",
  "practices",
  "project",
  "provides",
  "references",
  "setup",
  "skill",
  "telemetry",
  "this",
  "webapps",
  "what",
  "with",
]
`;
